--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "ngx-icon-picker",
+  "name": "@gisaia-team/ngx-icon-picker",
   "description": "Icon picker widget for Angular (version 13 and newer)",
   "bugs": "https://github.com/tech-advantage/ngx-icon-picker/issues",
   "license": "MIT",
-  "version": "1.10.0",
+  "version": "13.0.0",
+  "private": false,
   "scripts": {
     "ng": "ng",
     "lint": "ng lint",
