--- a/projects/lib/package.json
+++ b/projects/lib/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "ngx-icon-picker",
-  "version": "1.10.0",
+  "name": "@gisaia-team/ngx-icon-picker",
+  "version": "13.0.0",
   "dependencies": {
     "tslib": "^2.0.0"
   },
+  "private": false,
   "peerDependencies": {
     "@angular/common": "13 - 15",
     "@angular/core": "13 - 15",
