--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@gisaia-team/ngx-icon-picker",
   "description": "Icon picker widget for Angular (version 13 and newer)",
-  "bugs": "https://github.com/tech-advantage/ngx-icon-picker/issues",
+  "bugs": "https://github.com/gisaia/ngx-icon-picker/issues",
   "license": "MIT",
   "version": "13.1.0",
   "private": false,
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/tech-advantage/ngx-icon-picker.git"
+    "url": "https://github.com/gisaia/ngx-icon-picker.git"
   },
   "dependencies": {
     "@angular/animations": "~13.3.3",
@@ -54,7 +54,7 @@
     "@angular/language-service": "~13.3.3",
     "@types/jasmine": "~3.7.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^17.0.1",
+    "@types/node": "^18.19.1",
     "@typescript-eslint/eslint-plugin": "4.23.0",
     "@typescript-eslint/parser": "4.23.0",
     "eslint": "^7.26.0",
@@ -69,6 +69,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "ng-packagr": "^13.1.2",
+    "node": "^18.19.1",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "typescript": "~4.4.3"
