--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "url": "https://github.com/gisaia/ngx-icon-picker.git"
   },
   "dependencies": {
-    "@angular/animations": "~13.3.3",
-    "@angular/common": "~13.3.3",
-    "@angular/compiler": "~13.3.3",
-    "@angular/core": "~13.3.3",
-    "@angular/forms": "~13.3.3",
-    "@angular/platform-browser": "~13.3.3",
-    "@angular/platform-browser-dynamic": "~13.3.3",
-    "@angular/router": "~13.3.3",
+    "@angular/animations": "^14.3.0",
+    "@angular/common": "^14.3.0",
+    "@angular/compiler": "^14.3.0",
+    "@angular/core": "^14.3.0",
+    "@angular/forms": "^14.3.0",
+    "@angular/platform-browser": "^14.3.0",
+    "@angular/platform-browser-dynamic": "^14.3.0",
+    "@angular/router": "^14.3.0",
     "@fortawesome/angular-fontawesome": "^0.10.2",
     "@fortawesome/fontawesome-free": "5.15.4",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
@@ -41,23 +41,23 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1301.2",
-    "@angular-devkit/build-angular": "~13.3.3",
-    "@angular-devkit/core": "^13.3.3",
-    "@angular-eslint/builder": "^13.2.1",
-    "@angular-eslint/eslint-plugin": "^13.2.1",
-    "@angular-eslint/eslint-plugin-template": "^13.2.1",
-    "@angular-eslint/schematics": "13.2.1",
-    "@angular-eslint/template-parser": "^13.2.1",
-    "@angular/cli": "~13.3.3",
-    "@angular/compiler-cli": "~13.3.3",
-    "@angular/language-service": "~13.3.3",
+    "@angular-devkit/architect": "^0.1402.13",
+    "@angular-devkit/build-angular": "^14.2.13",
+    "@angular-devkit/core": "^14.2.13",
+    "@angular-eslint/builder": "^14.4.0",
+    "@angular-eslint/eslint-plugin": "^14.4.0",
+    "@angular-eslint/eslint-plugin-template": "^14.4.0",
+    "@angular-eslint/schematics": "14.4.0",
+    "@angular-eslint/template-parser": "^14.4.0",
+    "@angular/cli": "^14.2.13",
+    "@angular/compiler-cli": "^14.3.0",
+    "@angular/language-service": "^14.3.0",
     "@types/jasmine": "~3.7.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^18.19.1",
-    "@typescript-eslint/eslint-plugin": "4.23.0",
-    "@typescript-eslint/parser": "4.23.0",
-    "eslint": "^7.26.0",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
+    "eslint": "^8.23.0",
     "eslint-plugin-import": "2.23.0",
     "eslint-plugin-jsdoc": "34.2.2",
     "eslint-plugin-prefer-arrow": "1.2.3",
@@ -68,11 +68,11 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^13.1.2",
+    "ng-packagr": "^14.2.2",
     "node": "^18.19.1",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "typescript": "~4.4.3"
+    "typescript": "~4.8.4"
   },
   "overrides": {
     "@angular-devkit/build-angular": {
