--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
     "eslint": "^8.28.0",
-    "eslint-plugin-import": "2.23.0",
-    "eslint-plugin-jsdoc": "34.2.2",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsdoc": "50.6.1",
     "eslint-plugin-prefer-arrow": "1.2.3",
     "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~7.0.0",
@@ -72,7 +72,7 @@
     "node": "^18.19.1",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "typescript": "~4.8.4"
+    "typescript": "4.9.3"
   },
   "overrides": {
     "@angular-devkit/build-angular": {
