--- a/projects/lib/package.json
+++ b/projects/lib/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@gisaia-team/ngx-icon-picker",
-  "version": "13.1.0",
+  "version": "18.0.0",
   "dependencies": {
     "tslib": "^2.0.0"
   },
   "private": false,
   "peerDependencies": {
-    "@angular/common": "13 - 15",
-    "@angular/core": "13 - 15",
+    "@angular/common": "^18.2.13",
+    "@angular/core": "^18.2.13",
     "@fortawesome/angular-fontawesome": "^0.10.2",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
